# DQC-Toolkit

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  versions.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
api/crossval/: index.html
api/util/utils/: index.html
docs/: index.md
docs/api/: crossval.md  llm.md
docs/api/llm_utils/: llm_utils.md
docs/api/utils/: utils.md
dqc/: __init__.py  base.py  crossval.py  llm.py  version.py
dqc/crossval_utils/: __init__.py  _curation.py  _dataprocessing.py  _sanitychecks.py
dqc/llm_utils/: __init__.py  _sanity_checks.py  compute_confidence_score.py  inference.py
dqc/utils/: __init__.py  _dataprocessing.py  _sanitychecks.py  logging.py  noise_utils.py
notebooks/self-training-using-dqc-toolkit/: llama3-emotion.ipynb  llama3-mtop.ipynb  mistral-emotion.ipynb  mistral-mtop.ipynb
search/: search_index.json
tests/: conftest.py  test_crossval.py
tests/cross_val/: conftest.py  test_crossval.py
tests/llm/: conftest.py  test_llm.py
v0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.0-rc1/: 404.html  index.html  sitemap.xml
v0.1.0-rc1/api/crossval/: index.html
v0.1.0-rc1/api/util/utils/: index.html
v0.1.0-rc1/search/: search_index.json
v0.1.0/api/crossval/: index.html
v0.1.0/api/util/utils/: index.html
v0.1.0/search/: search_index.json
v0.1.1/: 404.html  index.html  sitemap.xml
v0.1.1/api/crossval/: index.html
v0.1.1/api/util/utils/: index.html
v0.1.1/search/: search_index.json
v0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.2.0/api/crossval/: index.html
v0.2.0/api/llm/: index.html
v0.2.0/api/llm_utils/llm_utils/: index.html
v0.2.0/search/: search_index.json
(+1 files in other folders)
